--- a/spring_boot_backend_template/src/main/resources/application.properties
+++ b/spring_boot_backend_template/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #server.servlet.context-path=/ems
 server.servlet.session.persistent=false
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/kiddohub_System?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/kiddohub?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=root
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
