doctor changes child reg status code changed

--- a/spring_boot_backend_template/src/main/resources/application.properties
+++ b/spring_boot_backend_template/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 #property to disable hibernateLazyInitializer during initialized proxies
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kshitija0088@gmail.com
+spring.mail.password=Kalyani@221
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.apache.commons.mail=DEBUG
