--- a/spring_boot_backend_template/src/main/resources/application.properties
+++ b/spring_boot_backend_template/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.jpa.open-in-view=false
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=kshitija0088@gmail.com
-spring.mail.password=Kalyani@221
+spring.mail.username=kurhadekshitija99@gmail.com
+spring.mail.password=kSk@812002
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.mail=DEBUG
