--- a/FrontEnd/kiddohub/package.json
+++ b/FrontEnd/kiddohub/package.json
@@ -44,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "stylelint": "^16.8.2",
+    "stylelint-config-standard": "^36.0.1"
   }
 }
